--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url('blur-clean.jpg');">
+<body style="background: url('blur-clean.jpg') no-repeat center center/cover fixed;">
     
     <div class="wrapper">
         <div id="prvi" class="padajPrvi">C</div>
